@@ -33,9 +33,13 @@ import java.util.*;
 public final class VideoUploadRunner implements ApplicationRunner {
     private final String videosPath;
 
-    private final String leagueSeason;
+    private final String year;
 
-    private final String leagueSplit;
+    private final String season;
+
+    private final String act;
+
+    private final String champion;
 
     private final GsonFactory gsonFactory;
 
@@ -47,13 +51,19 @@ public final class VideoUploadRunner implements ApplicationRunner {
 
     @Autowired
     public VideoUploadRunner(@Value("${videos.path}") String videosPath,
-        @Value("${league-of-legends.season}") String leagueSeason,
-        @Value("${league-of-legends.split}") String leagueSplit) {
+        @Value("${league-of-legends.year}") String year,
+        @Value("${league-of-legends.season}") String season,
+        @Value("${league-of-legends.act}") String act,
+        @Value("${league-of-legends.champion}") String champion) {
         this.videosPath = Objects.requireNonNull(videosPath);
 
-        this.leagueSeason = Objects.requireNonNull(leagueSeason);
+        this.year = Objects.requireNonNull(year);
 
-        this.leagueSplit = Objects.requireNonNull(leagueSplit);
+        this.season = Objects.requireNonNull(season);
+
+        this.act = Objects.requireNonNull(act);
+
+        this.champion = Objects.requireNonNull(champion);
 
         this.gsonFactory = GsonFactory.getDefaultInstance();
     }
@@ -85,7 +95,7 @@ public final class VideoUploadRunner implements ApplicationRunner {
 
                 LocalDate date = LocalDate.parse(dateString);
 
-                datesToVideos.compute(date, (_, value) -> {
+                datesToVideos.compute(date, (ignored, value) -> {
                     if (value == null) {
                         value = new ArrayList<>();
                     }
@@ -142,7 +152,7 @@ public final class VideoUploadRunner implements ApplicationRunner {
         return builder.build();
     }
 
-    private Video getVideo(LocalDate date, int index, int count) {
+    private Video getVideo(LocalDate date, Integer index, Integer count) {
         Video video = new Video();
 
         VideoSnippet snippet = new VideoSnippet();
@@ -153,8 +163,15 @@ public final class VideoUploadRunner implements ApplicationRunner {
 
         String dateString = formatter.format(date);
 
-        String title = String.format("LoL Season %s - Split %s -- %s %d/%d", this.leagueSeason, this.leagueSplit,
-            dateString, index, count);
+        String title;
+
+        if (Objects.equals(this.champion, "")) {
+            title = "LoL %s Season %s Act %s -- %s %d/%d".formatted(this.year, this.season, this.act, dateString,
+                index, count);
+        } else {
+            title = "LoL %s Season %s Act %s (%s) -- %s %d/%d".formatted(this.year, this.season, this.act,
+                this.champion, dateString, index, count);
+        }
 
         VideoUploadRunner.LOGGER.info("Uploading {}...", title);
 
